objects/PV_Cost__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <label>Quarter</label>
        <picklist>
            <picklistValues>
                <fullName>Q111</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q211</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q311</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q411</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q112</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q212</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q312</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q412</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q113</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q213</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q313</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q413</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q114</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q214</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q314</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q414</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q115</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q215</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q315</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q415</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q116</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q216</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q316</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q416</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Serengeti_Cost__c</fullName>
        <label>Serengeti Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SunPower_Cost__c</fullName>
        <label>SunPower Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>PV Cost</label>
    <listViews>
        <fullName>PV_Cost</fullName>
        <columns>Quarter__c</columns>
        <columns>SunPower_Cost__c</columns>
        <filterScope>Everything</filterScope>
        <label>PV Cost</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PV-{0000}</displayFormat>
        <label>PV Cost Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PV Costs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>